--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
-    "validator": "^13.15.20"
+    "validator": "^13.15.20",
+    "xlsx": "^0.18.5"
   }
 }
